# devops-cli

./: README.md  pyproject.toml  setup.cfg
devops_cli/: __init__.py  aws.py  clinic.py  k8s.py  main.py  minio.py  rabbitmq.py  utils.py
