[tool.poetry]
name = "devops-cli"
version = "0.1.0"
description = "A CLI tool that provides useful functions to operate on the Vital Beats cluster."
authors = ["Stephen Badger <stephen.badger@vitalbeats.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.7 <4"
boto3 = "^1.17.19"
pika = "^1.2.0"
kubernetes = "^12.0.1"

[tool.poetry.dev-dependencies]
pylint = "^2.7.2"
pycodestyle = "^2.6.0"
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
autopep8 = "^1.5.5"

[tool.poetry.scripts]
devops-cli = "devops_cli.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
